@@ -92,7 +92,10 @@ class CTheme extends CComponent
 	 */
 	public function getViewFile($controller,$viewName)
 	{
-		return $controller->resolveViewFile($viewName,$this->getViewPath().'/'.$controller->getUniqueId(),$this->getViewPath());
+		$moduleViewPath=$this->getViewPath();
+		if(($module=$controller->getModule())!==null)
+			$moduleViewPath.='/'.$module->getId();
+		return $controller->resolveViewFile($viewName,$this->getViewPath().'/'.$controller->getUniqueId(),$this->getViewPath(),$moduleViewPath);
 	}
 
 	/**
@@ -103,10 +106,10 @@ class CTheme extends CComponent
 	 */
 	public function getLayoutFile($controller,$layoutName)
 	{
-		$basePath=$this->getViewPath();
+		$moduleViewPath=$basePath=$this->getViewPath();
+		$module=$controller->getModule();
 		if(empty($layoutName))
 		{
-			$module=$controller->getModule();
 			while($module!==null)
 			{
 				if($module->layout===false)
@@ -116,18 +119,16 @@ class CTheme extends CComponent
 				$module=$module->getParentModule();
 			}
 			if($module===null)
-				return $controller->resolveViewFile(Yii::app()->layout,$basePath.'/layouts',$basePath);
+				$layoutName=Yii::app()->layout;
 			else
 			{
-				$basePath.='/'.$module->getId();
-				return $controller->resolveViewFile($module->layout,$basePath.'/layouts',$basePath);
+				$layoutName=$module->layout;
+				$moduleViewPath.='/'.$module->getId();
 			}
 		}
-		else
-		{
-			if(($module=$controller->getModule())!==null)
-				$basePath.='/'.$module->getId();
-			return $controller->resolveViewFile($layoutName,$basePath.'/layouts',$basePath);
-		}
+		else if($module!==null)
+			$moduleViewPath.='/'.$module->getId();
+
+		return $controller->resolveViewFile($layoutName,$basePath.'/layouts',$basePath,$moduleViewPath);
 	}
 }
